# bookery

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.opencode/: opencode.json
.serena/: project.yml
docs/: config.example.toml  roadmap.md  spec.md
hooks/: pre-commit
plans/: 01-web-list-browse-surface.md  02-web-navigation-url-state.md  03-web-apply-candidate-precision.md  04-web-detail-edit-shell-polish.md  05-catalog-path-truth-hygiene.md  06-series-metadata-coverage.md  08-import-dedup-format-equivalence.md  09-kobo-sync-lifecycle.md  11-static-collections.md
scripts/: migrate_strip_description_html.py  migrate_to_library_root.py
src/bookery/: __init__.py  __main__.py
tests/: conftest.py
tests/e2e/: test_add_pdf_cli.py  test_authors_cli.py  test_cli.py  test_cli_help_summaries.py  test_cli_ux_global.py  test_collection_cli.py  test_collection_web.py  test_convert_cli.py  test_enrichment_e2e.py  test_folder_cli.py  test_genre_apply_cli.py  test_genre_auto_assign_cli.py  test_genre_cli.py  test_import_cli.py  test_inventory_cli.py  test_match_cli.py  test_prune_cli.py  test_rematch_cli.py  test_remove_cli.py  test_reveal_cli.py  test_status_cli.py  test_sync_cli.py  test_sync_cli_push.py  test_tag_cli.py  test_tui_e2e.py  test_vault_export_cli.py  test_verify_cli.py  test_web_e2e.py
tests/fixtures/: kobo_schema.py  openlibrary_responses.py  pdf_factory.py
tests/integration/: test_add_integration.py  test_article_stripped_sort_parity.py  test_catalog_authors.py  test_catalog_path_truth.py  test_collections_workflow.py  (+31 more)
(+333 files in other folders)
